fixed middleFilter to be visible when scrolling and user click smallFilter

--- a/src/assets/css/cmps/middle-filter.scss
+++ b/src/assets/css/cmps/middle-filter.scss
@@ -2,14 +2,24 @@
   display: flex;
   justify-content: center;
   background: white;
-  // position: sticky;
-  // top: 56px;
-  // z-index: 10;
   &.sticky {
     position: sticky;
     top: 56px;
     z-index: 10;
   }
+}
+
+.middle-filter.hidden {
+  display: none !important;
+}
+
+.middle-filter.visible {
+  display: flex;
+  z-index: 9999 !important;
+  position: fixed;
+  top: 50px; 
+  left: 0;
+  right: 0;
 }
 
 .search-box {
